--- a/index.html
+++ b/index.html
@@ -418,12 +418,16 @@ $("#btnStartScan").click(function() {
 
 
 	   
-	},function (error) {
+	},
+	function (error) {
 		alert("Scanning failed: " + error);
 		}
 		
 	);
  });
+ 
+ 
+
  
 function delete_data() {
 
