--- a/index.html
+++ b/index.html
@@ -437,7 +437,8 @@ function delete_data() {
 			var brandname = 'DKNY';
 			var stylecode = '';
 			var qty1 = '';
-		
+			
+		alert("Session Id is : "+sesion);
 		
 		 transaction.executeSql('SELECT * FROM Stocks', [],
 		 function(transaction, result) {
