--- a/index.html
+++ b/index.html
@@ -453,6 +453,7 @@ function delete_data() {
 			  stylecode = row.Stylecode;
 			  
 			  qty1 = row.Qty;
+			  alert(i);
 			
 					$.ajax({
 					type:'POST',
