--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ function AddValueToDB() {
  
 	 
    });
-   
+   document.getElementById('txStylecode').value = "";
    ListDBValues();
  
  return false;
