--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ function getdelar_values(){
                 	<input type="button" value="Add More" onClick="AddValueToDB()" />
                 </label>
                 <label>
-                	<input type="button" value="Generate Suggested Order" onclick="delete_data();" />
+                	<input type="button" value="Generate SessionID" onclick="delete_data();" />
                 </label>
              </form>
         </div>
